apps/website/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Public
    gethomepage.dev/name: Website
    gethomepage.dev/description: Portfolio sites
    gethomepage.dev/pod-selector: app.kubernetes.io/part-of=website
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [isaiah.harville.dev, anna.harville.dev]
      secretName: harville-wildcard-shared-tls
  rules:
    - host: isaiah.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-isaiah
                port:
                  number: 80
    - host: anna.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-anna
                port:
                  number: 80
